# controlsimulator

./: .gitignore  .pre-commit-config.yaml  Makefile  NEXT_STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/eval_tables/: pid_surrogate_bo_plants.csv  pid_surrogate_bo_results.csv  pid_surrogate_bo_summary.csv  pid_surrogate_bo_summary.json  pid_surrogate_bo_summary.md
configs/datasets/: campaign_smoke.yaml  full.yaml  full_v4.yaml  smoke.yaml  smoke_v4.yaml  third_order_campaign.yaml
configs/evaluation/: campaign_smoke.yaml  evaluation_v4.yaml  full.yaml  pid_optimization_comparison.yaml  pid_surrogate_bo.yaml  smoke.yaml  smoke_v4.yaml  third_order_campaign.yaml  third_order_publication.yaml
configs/training/: campaign_smoke.yaml  full.yaml  smoke.yaml  smoke_v4.yaml  third_order_campaign.yaml  training_v4.yaml
reports/: experiment_log.md  overnight_report.md
reports/evaluations/evaluation_v4/: benchmark_summary.json  benchmark_summary.md  evaluation_summary.json  evaluation_summary.md  family_metrics.csv
reports/evaluations/full_mlp_v2/: benchmark_summary.json  benchmark_summary.md  evaluation_summary.json  evaluation_summary.md  (+1 more)
src/controlsimulator/: __init__.py  __main__.py  benchmark.py  campaign.py  cli.py  config.py  dataset.py  evaluate.py  features.py  metrics.py  pid.py  pid_optimization_compare.py  pid_surrogate_bo.py  plants.py  plotting.py  publication_eval.py  simulate.py  splits.py  train.py  utils.py
tests/: test_metrics.py  test_models.py  test_pipeline.py  test_plants.py  test_simulate.py  test_splits.py
(+25 files in other folders)
